--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,14 @@
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
+
     <string name="login_failed">"Login failed"</string>
+    <string name="login_title">用户登录</string>
+    <string name="login_error_password">密码不能为空</string>
+    <string name="login_error_username">用户名不能为空</string>
+    <string name="login_user_name">输入用户名</string>
+    <string name="login_password">输入密码</string>
+
+    <string name="navigation_home">首页</string>
+
 </resources>
